# mr_splashy_pants

./: .gitignore  Cargo.toml  README.md  license.txt
.github/workflows/: rust.yml
examples/: delete_post.rs  stream_new_posts_in_multiple_subreddits.rs  submit_post.rs
getting-started/: getting-started.md
src/: api.rs  api_sections.rs  lib.rs  shared_models.rs
src/api/: generated.rs  mod.rs  utils.rs
src/api/response/: models.rs
src/api/utils/: utils.rs
src/api_sections/: account.rs  listing.rs  oauth.rs
src/client/: client.rs
src/generated_api_sections/: account.rs
src/generated_api_sections/execution/: account.rs  listings.rs
src/pants/: client.rs  front_page.rs  mod.rs  subreddit.rs  user.rs  users.rs
src/pants/front_page/: mod.rs
src/pants/subreddit/: mod.rs
src/pants/utils/: mod.rs
src/shared_models/: account.rs  models.rs  utils.rs
