[package]
name = "mr_splashy_pants"
version = "0.1.1"
authors = ["Toby Murray <toby.murray@protonmail.com>"]
edition = "2018"
description = "Very incomplete Rust bindings for the Reddit API"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio-test = "*"
dotenv = "*"
