[package]
name = "mr_splashy_pants"
version = "0.1.28"
authors = ["Toby Murray <toby.murray@protonmail.com>"]
edition = "2018"
description = "Very incomplete Rust bindings for the Reddit API"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/crate/mr_splashy_pants/"
readme = "README.md"
repository = "https://github.com/tobymurray/mr_splashy_pants"
keywords = ["reddit", "api", "client", "wrapper"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
handlebars = "3.4"
futures-core = "0.3.5"
async-stream = "0.3"
log = "0.4"

[dev-dependencies]
tokio-test = "0.2"
dotenv = "0.15"
futures-util = "0.3.5"
fern = "0.6"
chrono = "0.4"
tokio = { version = "0.2", features = ["full"] }
